[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "andyhoang", email = "ngocdunghoangdl@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "slack-sdk>=3.20.2",
    "uvicorn>=0.21.1",
    "pydantic>=1.10.7",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pydantic>=1.10.7",
    "pytest>=7.2.2",
    "requests>=2.28.2",
]
