[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "requests>=2.28.2",
    "pre-commit>=3.2.1"
]
test = [
    "pytest>=7.2.2",
    "httpx>=0.23.3",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "andyhoang", email = "ngocdunghoangdl@gmail.com"},
]

dependencies = [
    "fastapi>=0.95.0",
    "slack-sdk>=3.20.2",
    "uvicorn>=0.21.1",
    "pydantic>=1.10.7",
]
requires-python = ">=3.10"
license = {text = "MIT"}

